# forward/viscoelastic/CMakeLists.txt
#
# Viscoelastic SEM solver with SLS attenuation. NOTE: Not yet connected to the build system —
# implementation deferred.
#
# When ready, uncomment in ../CMakeLists.txt: add_subdirectory(viscoelastic)
#
# Binary naming: gf_solver_viscoelastic_mpi, gf_solver_viscoelastic_cuda,
# gf_solver_viscoelastic_mpi_cuda
