[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
url = "https://mirrors.cernet.edu.cn/pypi/web/simple"
default = true

[project]
name = "gf-post"
version = "0.1.0"
description = "Strain Green's function extraction from SEM checkpoint files"
requires-python = ">=3.10"
dependencies = ["numpy", "h5py", "scipy", "click"]

[project.scripts]
gf-postprocess = "gf_post.cli:main"

[project.optional-dependencies]
test = ["pytest", "h5py"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
